--- a/Styling/basicStyling.css
+++ b/Styling/basicStyling.css
@@ -18,27 +18,42 @@ h1 {
     display: flex;
     justify-content: space-around;
     margin-bottom: 15px;
-  }
+}
   
-  .navigationBar a {
+.navigationBar a {
     font-size: 200%;
     color: #4f1f00;
-    padding: 20px 70px;
+    padding: 20px 40px;
     background-color: #fffded;
     text-decoration: none;
     display: flex;
     justify-content: center;
     align-self: center;
-  }
+}
   
-  .navigationBar a:hover {
+.navigationBar a:hover {
     background-color: #e67e22;
     border-radius: 5px;
     transition: background-color 0.3s ease;
-  }
+}
+
+.accountButton {
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-decoration: none;
+    font-size: 100%;
+    margin-right: 10px;
+    margin-top: 10px;
+}
 
 #logo {
     width: 100px;
+}
+
+div#welcome {
+    font-size: 40px;
+    text-align: center;
 }
 
 .backButton a{
@@ -93,6 +108,20 @@ h1 {
     display: block;
 }
 
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    padding-top: 0px;
+    box-sizing: border-box;
+  }
+  
+  .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
 .noMarginTop {
     margin-top: 0px;
 }
@@ -138,6 +167,7 @@ h1 {
 .bold {
     font-weight: bold;
 }
+
 
 @media screen and (max-width: 650px) {
     .navigationBar {
