--- a/Styling/canvas.css
+++ b/Styling/canvas.css
@@ -2,5 +2,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 55vh; /* This makes the container take up the full height of the viewport */
+  height: 55vh;
 }
