--- a/Styling/basicStyling.css
+++ b/Styling/basicStyling.css
@@ -32,7 +32,7 @@ h1 {
 }
   
 .navigationBar a:hover {
-    background-color: #e67e22;
+    background-color: #e69a58;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
@@ -45,7 +45,7 @@ h1 {
     font-size: 120%;
     margin-right: 10px;
     margin-top: 10px;
-    background-color: #e67e22;
+    background-color: #f2c078;
     border-radius: 5px;
     padding: 10px;
     color: #4e342e;
@@ -70,7 +70,7 @@ div#welcome {
 .backButton a{
     margin-top: 20px;
     padding: 10px;
-    background-color: #e67e22;
+    background-color: #f2c078;
     border: 1px solid #4f1f00;
     text-decoration: none;
     color: #4e342e;
@@ -196,6 +196,10 @@ section {
     text-align: center;
 }
 
+#logo {
+    margin-left: 10px;
+}
+
 @media screen and (max-width: 650px) {
     .navigationBar {
         display: flex;
@@ -226,6 +230,7 @@ section {
     #logo {
         order: -1;
         margin-bottom: 5px;
+        margin-left: 0px;
     }
 
     #greeting {
